@@ -1,3 +1,9 @@
+2001-04-15  Dave Peticolas  <dave@krondo.com>
+
+	* src/gnome/window-main.c: take out devel menu
+
+	* src/gnome/dialog-price-editor.c (price_ok_clicked): fix bug
+
 2001-04-15  Christian Stimming  <stimming@tuhh.de>
 
 	* src/scm/report.scm: Defined global identifiers for some option
